--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -9,15 +9,6 @@
                     </div>
                     <div class="card-body">
                         <form>
-
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <mat-form-field class="example-full-width">
-                                        <div *ngIf="userid">User is logged In with id {{userid}}</div>
-                                        <div *ngIf="!userid">User is not logged In</div>
-                                    </mat-form-field>
-                                </div>
-                            </div>
                             <div class="row">
                                 <div class="col-md-6">
                                     <mat-form-field class="example-full-width">
@@ -70,8 +61,9 @@
             <div class="col-md-4">
                 <div class="card card-profile">
                     <div class="card-avatar">
-                        <a href="javascript:void(0)">
-                            <img class="img profile-image" style="width:100%;"
+                        <a>
+                            <img class="img profile-image"
+                                style="width:100%;"
                                 [src]="profilePic" />
                         </a>
                     </div>
