--- a/frontend/src/app/sidebar/sidebar/sidebar.component.html
+++ b/frontend/src/app/sidebar/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
     <div class="list-group list-group-flush">
       <a routerLink="/allentries"
         class="list-group-item list-group-item-action bg-light">All Entries</a>
-      <a routerLink="#"
+      <a routerLink="statistics"
         class="list-group-item list-group-item-action bg-light">Statistics</a>
       <a routerLink="#"
         class="list-group-item list-group-item-action bg-light">Recommendations</a>
