--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -10,52 +10,23 @@
                     <div class="card-body">
                         <form>
                             <div class="row">
-                                <div class="col-md-6">
-                                    <mat-form-field class="example-full-width">
-                                        <label for="uName"></label>
-                                        <input matInput
-                                            placeholder="Name"
-                                            type="text"
-                                            id="uName">
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <label>About Me</label>
-                                    <br>
-                                    <div class="col-md-12 mt-3">
-
-                                        <textarea class="form-control"
-                                            placeholder="Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo."></textarea>
-
-                                    </div>
-                                    <br>
-                                    <!-- <div class="form-group">
-                                        <div class="form-group">
-                                            <label class="bmd-label-floating"> Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</label>
-                                            <textarea class="form-control" rows="5"></textarea>
-                                        </div>
-                                    </div> -->
+                                <div>
+                                    <label for="Image">Choose a new Profile Picture</label>
+                                    <input type="file"
+                                        (change)="upload($event)"
+                                        accept="*.png.jpg.jpeg"
+                                        class="btn">
                                 </div>
                             </div>
                             <button mat-raised-button
                                 type="submit"
-                                class="btn btn-danger pull-right">Update
+                                class="btn btn-primary pull-right"
+                                (click)="uploadImage()">Update
                                 Profile</button>
                             <div class="clearfix"></div>
                         </form>
                     </div>
-                    <div>
-                        <label for="Image">Choose a new Profile Picture</label>
-                        <input type="file"
-                            (change)="upload($event)"
-                            accept="*.png.jpg.jpeg"
-                            class="btn btn-info">
-                        <button (click)="uploadImage()"
-                            class="btn btn-success pull-right">
-                            Upload Image</button>
-                    </div>
+
                 </div>
             </div>
             <div class="col-md-4">
