--- a/frontend/src/app/sidebar/sidebar/sidebar.component.css
+++ b/frontend/src/app/sidebar/sidebar/sidebar.component.css
@@ -1,3 +1,24 @@
+@media (max-width: 768px) {
+  #sidebar-wrapper {
+    min-height: 100vh;
+    width: 60px;
+    -webkit-transition: margin .25s ease-out;
+    -moz-transition: margin .25s ease-out;
+    -o-transition: margin .25s ease-out;
+    transition: margin .25s ease-out;
+  }
+.bi-plus-circle-fill{
+  position: relative;
+  right: 20px;
+}
+  a{
+    width: 30px;
+  }
+  .item-label {
+    display: none;
+  }
+}
+
 #wrapper{
 
         margin: 0;
@@ -11,14 +32,7 @@ body {
     overflow-x: hidden;
     
   }
-  #sidebar-wrapper {
-    min-height: 100vh;
-    margin-left: -15rem;
-    -webkit-transition: margin .25s ease-out;
-    -moz-transition: margin .25s ease-out;
-    -o-transition: margin .25s ease-out;
-    transition: margin .25s ease-out;
-  }
+  
   #sidebar-wrapper .sidebar-heading {
     padding: 0.875rem 1.25rem;
     font-size: 1.2rem;
@@ -40,6 +54,7 @@ body {
       min-width: 0;
       width: 100%;
     }
+    
     #wrapper.toggled #sidebar-wrapper {
       margin-left: -15rem;
     }
@@ -55,4 +70,8 @@ margin-left: 15px;
 
   }
 
-  
+
+   a.list-group-item:hover .item-label{
+    display:contents;
+
+    }
