--- a/frontend/src/app/header/header/header.component.html
+++ b/frontend/src/app/header/header/header.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light shadow-sm bg-light fixed-top">
-  <div class="container left ml0">
+  <div class="container">
     <div class="navbar-collapse"
       id="navbar4">
       <ul class="md0">
 
 
         <nav class="navbar navbar-expand-lg navbar-light shadow-sm bg-light fixed-top">
-          <div class="container left ml0">
+          <div class="container">
             <div class="navbar-collapse"
               id="navbar4">
               <ul class="md0">
@@ -18,7 +18,7 @@
                   height="60px">
 
 
-                <span class="ml-3 font-weight-bold">&nbsp; DOLPHIN</span>
+                <span class="font-weight-bold">&nbsp; DOLPHIN</span>
 
               </ul>
             </div>
@@ -27,7 +27,7 @@
 
             <div class="navbar-collapse"
               id="navbar4">
-              <ul class="navbar-nav mr-auto pl-lg-4">
+              <ul class="navbar-nav mr-auto">
                 <li class="nav-item px-lg-2 active"> <a class="nav-link"
                     routerLink="/home"> <span class="d-inline-block d-lg-none icon-width"></span>Home</a> </li>
                 <li class="nav-item px-lg-2"> <a class="nav-link"
